Fix alignment of "invidious" logo on search page
The alignment was broken by #2196

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -542,3 +542,6 @@ p,
 #descriptionWrapper {
        max-width: 600px;
 }
+
+/* Center the "invidious" logo on the search page */
+#logo > h1 { text-align: center; }
